# yuno-internal-challenge

./: .gitignore  AGENTS.md  CHALLENGE_SUMMARY.md  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  task.md  vercel.json
api/: AGENTS.md  authorize.rs  health.rs  report.rs
output/: performance_report.json  test_transactions.json
src/: AGENTS.md  lib.rs
src/data/: AGENTS.md  mod.rs
src/engine/: AGENTS.md  mod.rs  retry.rs  strategy.rs
src/models/: mod.rs  psp.rs  report.rs  routing.rs  transaction.rs
src/report/: mod.rs
src/simulator/: AGENTS.md  config.rs  mod.rs
