[package]
name = "yuno-internal-challenge"
version = "0.1.0"
edition = "2021"
description = "Yuno Internal Challenge — Rust API deployed on Vercel"

# Shared library crate (business logic, models, utils)
[lib]
path = "src/lib.rs"

# Serverless function handlers (one [[bin]] per endpoint)
[[bin]]
name = "health"
path = "api/health.rs"

[dependencies]
vercel_runtime = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
